(lang dune 3.9)

(name ocaml_dsa)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ocaml_dsa)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune ppx_deriving ounit2)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
